# sudare

./: Cargo.toml  LICENSE  README.md
.github/workflows/: debug.yml  release.yml  rust.yml
example/: Procfile
src/: main.rs
