[package]
name = "sudare"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"termwiz" = { git="https://github.com/wez/wezterm", tag="20221119-145034-49b9839f", features=["use_image"] }
"wezterm-term" = { git="https://github.com/wez/wezterm", tag="20221119-145034-49b9839f" }
"portable-pty" = { git="https://github.com/wez/wezterm", tag="20221119-145034-49b9839f" }
"regex" = "1.7.0"
"serde" = { version="1.0.152", features=["derive"] }
"serde_json" = "1.0"
"sha2" = "0.10.6"
"log" = "0.4.17"
"simplelog" = "0.12.0"
