[package]
name = "sudare"
version = "0.1.4"
edition = "2021"
license-file = "LICENSE"
description = "Manage Procfile-based applications with terminal multiplexer"
homepage = "https://github.com/atty303/sudare"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
"termwiz" = { git="https://github.com/wez/wezterm", tag="20221119-145034-49b9839f", features=["use_image"] }
"wezterm-term" = { git="https://github.com/wez/wezterm", tag="20221119-145034-49b9839f" }
"portable-pty" = { git="https://github.com/wez/wezterm", tag="20221119-145034-49b9839f" }
"regex" = "1.7.0"
"serde" = { version="1.0.152", features=["derive"] }
"serde_json" = "1.0"
"sha2" = "0.10.6"
"log" = "0.4.17"
"simplelog" = "0.12.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
